fix: z-index

--- a/src/components/cardItem/cardItem.css
+++ b/src/components/cardItem/cardItem.css
@@ -17,6 +17,7 @@
     padding: 16px;
     width: 26px;
     height: 26px;
+    z-index: 1;
 
 }
 
